--- a/site.css
+++ b/site.css
@@ -48,6 +48,7 @@ a:visited {
 }
 
 .so-image-links-container {
+  position: absolute;
   width: 10%;
 }
 
@@ -61,4 +62,14 @@ a:visited {
   width: 50%;
   margin: 0 25%;
   padding-bottom: 10px;
+}
+
+.so-image-container {
+  width: 30%;
+  display: flex;
+  padding-left: 60%;
+}
+
+.so-landing-image {
+  width: 100%;
 }
