--- a/site.css
+++ b/site.css
@@ -4,8 +4,8 @@ body {
   width: 100%;
   height: 100%;
   font-family: 'Knif Mono';
-  font-size: 2vw;
-  color: black;
+  font-size: 3vw;
+  color: white;
   background-color: #D5D8DC;
 }
 
@@ -21,7 +21,6 @@ audio {
   padding: 0 5px;
   width: 20%;
   opacity: 50%;
-
 }
 
 a {
@@ -45,6 +44,7 @@ a:visited {
 
 .so-page-inner {
   padding: 50px;
+  z-index: 1;
 }
 
 .so-image-links-container {
@@ -64,12 +64,11 @@ a:visited {
   padding-bottom: 10px;
 }
 
-.so-image-container {
-  width: 30%;
-  display: flex;
-  padding-left: 60%;
-}
-
-.so-landing-image {
-  width: 100%;
+.so-huge {
+  position: fixed;
+  width: 80%;
+  opacity: 30%;
+  margin: 0 10%;
+  z-index: 99;
+  pointer-events: none;
 }
