--- a/one/site.css
+++ b/one/site.css
@@ -4,9 +4,9 @@ body {
   width: 100%;
   height: 100%;
   font-family: 'Knif Mono';
-  font-size: 2vw;
+  font-size: 1vw;
   color: black;
-  background-color: #D5D8DC;
+  background-color: #EEEEEE;
 }
 
 @font-face {
@@ -21,44 +21,68 @@ audio {
   padding: 0 5px;
   width: 20%;
   opacity: 50%;
-
+  z-index: 100;
 }
 
 a {
   text-decoration: none;
-  color: black;
+  color: white;
 }
 
 a:hover {
   cursor: pointer;
-  color: black;
 }
 
 a:visited {
-  color: black;
+  color: white;
 }
 
 .so-page {
   position: relative;
+  width: 100%;
+}
+
+.so-page-inner {
+  z-index: 1;
+}
+
+/* Columns */
+
+.so-column-section {
+  position: fixed;
+  width: 90%;
+  margin: 0 5%;
+  padding: 25px 0;
+  justify-content: center;
+  display: flex;
+  float: left;
+  top: 0;
+  z-index: 100;
+}
+
+/* Video Styling */
+
+.so-video-width {
+  width: 100%;
+  z-index: -1;
+}
+
+.so-video-container {
+  position: absolute;
+}
+
+/* Image Styling */
+
+.so-image-full {
+  width: 100%;
+  box-shadow: 5px 5px 5px grey;
 }
 
 /* Audio Styling */
 
 .so-audio-container {
-  position: fixed;
-  z-index: 10;
   width: 100%;
   top: 0;
-}
-
-.so-audio-container-inner {
-  padding: 10px;
-  display: flex;
-  justify-content: center;
-}
-
-.so-audio-container-inner--second {
-  padding: 0 10px 10px 10px;
 }
 
 audio::-webkit-media-controls-panel {
@@ -67,59 +91,4 @@ audio::-webkit-media-controls-panel {
 
 audio::-webkit-media-controls-current-time-display {
   color: #fff;
-}
-
-/* Back Button */
-
-.so-back-button {
-  position: fixed;
-  width: 10%;
-  left: 0;
-  bottom: 0;
-}
-
-.so-back-image {
-  width: 100%;
-  opacity: 50%;
-}
-
-/* Text Styling */
-
-.so-title-container {
-  bottom: 0;
-  text-align: center;
-  color: white;
-  width: 90%;
-  margin: 0 5%;
-  padding: 10px;
-  font-size: 1vw;
-  opacity: 100%;
-  text-shadow: 1px 0px 10px white;
-}
-
-/* Video Styling */
-
-.so-video-container {
-}
-
-.so-video-width {
-  width: 100%;
-}
-
-.so-image {
-  width: 100%;
-}
-
-#player-container #play-pause {
-  cursor: pointer;
-  width: 100px;
-  height: 25px;
-  z-index: 2;
-  background-image: url("../images/line.png");
-  background-repeat: no-repeat!important;
-  background-size: 100px;
-}
-
-.pause {
-   background-image: url("../images/line.png")!important;
 }
