--- a/site.css
+++ b/site.css
@@ -3,81 +3,72 @@ body {
   padding: 0;
   width: 100%;
   height: 100%;
-  font-family: 'Knif Mono';
+  font-family: helvetica;
   font-size: 3vw;
   color: black;
-  background-color: #EEEEEE;
+  background-color: rgb(243,241,234);
+  overflow: hidden;
 }
 
-@font-face {
-  font-family: 'Knif Mono';
-  src: url('./typeface/knif-mono.ttf') format('truetype');
-  font-display: swap;
-  font-weight: normal;
-  font-style: normal;
-}
-
-
-audio {
-  padding: 0 5px;
-  width: 100%;
-  opacity: 50%;
-}
-
-a {
-  text-decoration: none;
-  color: black;
-}
-
-a:hover {
+button {
+  padding: 0;
+  border: 0;
+  background-color: rgb(243,241,234);
   cursor: pointer;
-  text-decoration: underline;
 }
 
-a:visited {
-  color: black;
+.so-scan-container {
+  margin: 30px;
 }
 
-.so-page {
-  position: relative;
+.so-scan-container-inner {
   width: 100%;
 }
 
-.so-page-inner {
-  z-index: 1;
+.so-play-stop-container {
+  margin-bottom: 25px;
+  display: flex;
 }
 
-/* Links Container */
+.so-play-stop-button {
+  margin-right: 10px;
+}
 
-.so-links-title-container {
-  width: 50%;
-  margin: 0 25%;
-  text-align: center;
+.ao-play-pause {
+  width: 10px;
+}
+
+.so-video-margin {
+  width: 100%;
+  justify-content: space-between;
+  display: flex;
+}
+
+.so-video-width {
+  width: 12%;
+  /* filter: blur(10px);
+  -webkit-filter: blur(10px); */
+  transition-duration: 1s;
+}
+
+.so-video-width:hover {
+  filter: blur(0px);
+  -webkit-filter: blur(0px);
+  transition-duration: 1s;
+}
+
+.so-video-width--one {
+  margin-top: 250px;
+}
+
+.so-video-width--three {
   margin-top: 50px;
-  text-transform: uppercase;
 }
 
-.so-links-container {
-  width: 50%;
-  margin: 0 25%;
-  text-align: center;
-  margin-top: 100px;
-  text-transform: uppercase;
-  /* animation-name: blink;
-  animation-duration: 2s;
-  animation-iteration-count: infinite; */
+.so-video-width--fourth {
+  margin-top: 25px;
 }
 
-@keyframes blink {
-  0% {
-    opacity: 100%;
-  }
-
-  50% {
-    opacity: 0;
-  }
-
-  100% {
-    opacity: 100%;
-  }
+.so-video-width--five {
+  margin-top: 75px;
 }
