--- a/site.css
+++ b/site.css
@@ -4,82 +4,81 @@ body {
   width: 100%;
   height: 100%;
   font-family: helvetica;
-  font-size: 2vw;
+  font-size: 14px;
   color: black;
-  background-color: rgb(243,241,234);
+  background-color: white;
   overflow: hidden;
-}
-
-button {
-  padding: 0;
-  border: 0;
-  background-color: rgb(243,241,234);
-  cursor: pointer;
 }
 
 img {
   width: 100%;
 }
 
+a {
+  color: blue;
+}
+
+a:visited {
+  color: blue;
+}
+
+a:hover {
+  animation-name: flashing;
+  animation-iteration-count: infinite;
+  animation-duration: 1s;
+}
+
+
+.so-page {
+  position: relative;
+}
+
 .so-scan-container {
-  margin: 30px;
+  margin: 10px;
 }
 
 .so-scan-container-inner {
+}
+
+.so-main-text-cointainer {
   width: 100%;
-  display: flex;
-  justify-content: space-between;
 }
 
-.so-sign-image-container {
-  width: 20%;
-  float: left;
+.so-text-container {
+  list-style: none;
+  margin-bottom: 20px;
 }
 
-.so-play-stop-container {
-  margin-bottom: 25px;
-  display: flex;
+.blue {
+  color: blue;
+  animation-name: flashing;
+  animation-iteration-count: infinite;
+  animation-duration: 1s;
 }
 
-.so-play-stop-button {
-  margin-right: 10px;
+.yellow-back {
+  background-color: yellow;
 }
 
-.ao-play-pause {
-  width: 10px;
-}
-
-.so-video-margin {
-  width: 100%;
-  justify-content: space-between;
-  display: flex;
-}
-
-.so-video-width {
-  width: 12%;
-  /* filter: blur(10px);
-  -webkit-filter: blur(10px); */
-  transition-duration: 1s;
-}
-
-.so-video-width:hover {
-  filter: blur(0px);
-  -webkit-filter: blur(0px);
-  transition-duration: 1s;
-}
-
-.so-video-width--one {
-  margin-top: 250px;
-}
-
-.so-video-width--three {
-  margin-top: 50px;
-}
-
-.so-video-width--fourth {
-  margin-top: 25px;
-}
-
-.so-video-width--five {
-  margin-top: 75px;
+@keyframes flashing {
+  0% {
+    background-color: yellow;
+    color: blue;
+  }
+  20% {
+    background-color: blue;
+    color: white;
+  }
+  40% {
+    background-color: white;
+    color: black;
+  }
+  60% {
+    background-color: yellow;
+    color: red;
+  }
+  80% {
+    background-color: purple;
+    color: white;
+  }
 }
