--- a/machines/site.css
+++ b/machines/site.css
@@ -6,7 +6,7 @@ body {
   font-family: courier;
   font-size: 3vw;
   color: black;
-  background-color: rgb(243,241,234);
+  background-color: #EFEFEF;
   overflow: hidden;
 }
 
@@ -65,7 +65,8 @@ button {
 
 .so-video-width {
   width: 100%;
-  padding: 10px;
+  margin: 10px;
+  border: 1px black solid;
 
 }
 
