--- a/dissonance/site.css
+++ b/dissonance/site.css
@@ -6,44 +6,45 @@ body {
   font-family: courier;
   font-size: 3vw;
   color: black;
-  overflow: hidden;
 }
 
 button {
   margin-right: 2px;
   background-color: white;
+  z-index: 1000;
 }
 
 .so-scan-container {
   margin: 30px;
+  z-index: 100;
 }
 
-.so-scan-container-inner {
-  width: 100%;
+.so-play-stop-container {
   display: flex;
-  flex-wrap: wrap;
-  float: left;
 }
 
-.so-play-stop-container--fixed {
+.so-play-stop-container--fixed-top {
+  position: fixed;
+  top: 0;
+  padding-top: 30px;
+}
+
+.so-play-stop-container--fixed-bottom {
   position: fixed;
   bottom: 0;
   padding-bottom: 30px;
 }
 
 .so-video-container {
-  position: fixed;
-  width: 35%;
-  top: 50%;
-  transform: translateY(-50%);
-  margin: 0 32.5%;
-  justify-content: space-around;
-  display: flex;
+  width: 80%;
+  margin: 0 10%;
+  padding-top: 30px;
 }
 
 .so-video-width {
   width: 100%;
-  margin: 10px;
+  top: 0;
+  margin-bottom: 30px;
 
 }
 
