--- a/site.css
+++ b/site.css
@@ -23,9 +23,7 @@ a:visited {
 }
 
 a:hover {
-  animation-name: flashing;
-  animation-iteration-count: infinite;
-  animation-duration: 1s;
+  color: grey;
 }
 
 
