--- a/site.css
+++ b/site.css
@@ -142,4 +142,14 @@ img {
     float: left;
     width: 100%
   }
+
+  .tw-link-container {
+    border: 2px black solid;
+    font-size: 50px;
+    text-transform: uppercase;
+    padding: 30px 15px 15px 15px;
+    text-align: center;
+    font-weight: lighter;
+    margin-bottom: 50px;
+  }
 }
