--- a/theartofnoises/site.css
+++ b/theartofnoises/site.css
@@ -13,7 +13,7 @@ body {
 @font-face {
   font-family: 'Lincoln';
   src: url('../typefaces/lincoln.otf') format('truetype');
-  font-display: swap;
+  font-display: block;
   font-weight: normal;
   font-style: normal;
 }
@@ -21,7 +21,7 @@ body {
 @font-face {
   font-family: 'CMU Normal';
   src: url('../typefaces/cmu-normal.ttf') format('truetype');
-  font-display: swap;
+  font-display: block;
   font-weight: normal;
   font-style: normal;
 }
@@ -29,7 +29,7 @@ body {
 @font-face {
   font-family: 'CMU Italic';
   src: url('../typefaces/cmu-italic.ttf') format('truetype');
-  font-display: swap;
+  font-display: block;
   font-weight: normal;
   font-style: normal;
 }
