--- a/machines/site.css
+++ b/machines/site.css
@@ -3,75 +3,157 @@ body {
   padding: 0;
   width: 100%;
   height: 100%;
-  font-family: courier;
-  font-size: 3vw;
+  font-family: helvetica;
+  font-size: 10px;
   color: black;
+  background-color: white;
+  background-color: #c199ff;
   overflow: hidden;
 }
 
+@font-face {
+  font-family: 'Lincoln';
+  src: url('../typefaces/lincoln.otf') format('truetype');
+  font-display: block;
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'CMU Normal';
+  src: url('../typefaces/cmu-normal.ttf') format('truetype');
+  font-display: block;
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'CMU Italic';
+  src: url('../typefaces/cmu-italic.ttf') format('truetype');
+  font-display: block;
+  font-weight: normal;
+  font-style: normal;
+}
+
 button {
-  margin-right: 2px;
-  background-color: white;
+  border: 2px solid black;
+  border-radius: 3px;
+  background-color: pink;
+  margin-bottom: 5px;
+  font-family: "CMU Normal";
+  font-weight: bolder;
+  padding: 0 10px;
+  cursor: pointer;
 }
 
-.so-scan-container {
-  margin: 30px;
+a {
+  color: black;
+  text-decoration: none;
 }
 
-.so-scan-container-inner {
+a:hover {
+  color: blue;
+}
+
+a:visited {
+  color: none;
+}
+
+img {
+  width: 100%;
+}
+
+button {
+  margin-right: 5px;
+}
+
+.tw-page {
+  position: relative;
+  background-color: #c20000;
+  border-bottom: 2px black solid;
+  cursor: default;
+}
+
+.tw-header-container {
+  width: 100%;
+  background-color: #c199ff;
+  position: fixed;
+  border-bottom: 2px black solid;
+}
+
+.tw-header-container-inner {
+  padding: 20px;
+  text-transform: uppercase;
+  text-align: center;
+  font-family: 'Lincoln';
+  font-size: 40px;
+}
+
+.tw-pink-hover:hover {
+  color: pink;
+}
+
+.tw-main-content-container {
+  padding-top: 150px;
+  margin: 0 75px 0px 75px;
+  height: 100vh;
+}
+
+.tw-main-content-container-inner {
   width: 100%;
   display: flex;
   flex-wrap: wrap;
   float: left;
 }
 
-.so-play-stop-container--fixed {
+.tw-play-stop-container--fixed {
   position: fixed;
   bottom: 0;
-  padding-bottom: 30px;
+  padding-bottom: 50px;
 }
 
-.so-video-container {
+.tw-underline {
+  text-decoration: underline;
+}
+
+.tw-video-container {
   position: fixed;
   width: 35%;
   top: 50%;
-  transform: translateY(-50%);
+  transform: translateY(-40%);
   margin: 0 32.5%;
   justify-content: space-around;
   display: flex;
 }
 
-.so-video-width {
+.tw-video-width {
   width: 100%;
   margin: 10px;
 
 }
 
-@keyframes flicker {
-  0% {
-    opacity: 1;
-  }
-  25% {
-    opacity: 0;
-  }
-  50% {
-    opacity: 1;
-  }
-  75% {
-    opacity: 0;
-  }
-}
-
-/* Colours */
-
 .red {
   background-color: red;
-  animation-name: flicker;
-  animation-iteration-count: infinite;
-  animation-duration: 4s;
 }
 
-.red:hover {
-  background-color: red;
-  animation: none;
-}
+@media only screen and (min-device-width: 320px) and
+(max-device-width: 700px) and
+(-webkit-min-device-pixel-ratio: 1) {
+
+  button {
+    margin-bottom: 5px;
+    font-size: 30px;
+  }
+
+  .tw-header-container-inner {
+    padding: 20px;
+    text-transform: uppercase;
+    text-align: center;
+    font-family: 'Lincoln';
+    font-size: 60px;
+  }
+
+  .tw-main-content-container {
+    padding-top: 150px;
+    margin: 0 75px;
+  }
