--- a/machines/site.css
+++ b/machines/site.css
@@ -69,7 +69,7 @@ button {
 
 .tw-page {
   position: relative;
-  background-color: #c20000;
+  background-color: white;
   border-bottom: 2px black solid;
   cursor: default;
 }
