--- a/theartofnoises/site.css
+++ b/theartofnoises/site.css
@@ -79,7 +79,8 @@ img {
 
 .tw-main-text-container {
   padding-top: 150px;
-  margin: 0 300px 0px 300px;
+  width: 60%;
+  margin: 0 20%;
 }
 
 .tw-title-container {
