--- a/sirenstakenforwonders/site.css
+++ b/sirenstakenforwonders/site.css
@@ -51,10 +51,6 @@ img {
   width: 100%;
 }
 
-button {
-  margin-right: 5px;
-}
-
 .tw-page {
   position: relative;
   background-color: #c20000;
@@ -81,17 +77,10 @@ button {
   color: pink;
 }
 
-.tw-button-container {
-  position: fixed;
-  margin-top: 150px;
-  margin-left: 50px;
-  display: flex;
-}
-
 .tw-main-text-container {
   padding-top: 150px;
   width: 60%;
-  margin: 20%;
+  margin: 0 20%;
 }
 
 .tw-title-container {
@@ -159,7 +148,8 @@ button {
 
   .tw-main-text-container {
     padding-top: 150px;
-    margin: 0 75px;
+    margin: 0 10%;
+    width: 80%;
   }
 
   .tw-text-container {
